use github action R cmd check

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # electricitymapsr
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/andypicke/electricitymapsr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/andypicke/electricitymapsr/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 electricitymapsr is a R API wrapper for electricitymaps
